# wmc-mpris

./: .editorconfig  CMakeLists.txt  README.md  me.f1u77y.web_media_controller.chromium.json  meson.build
cmake/: gdbus_codegen.cmake
include/: mpris2.h  util.h
src/: main.c  message.c  mpris2.c  proxy.c  util.c
